--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,3 @@
-backend_url = https://talktokamya-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=your code engine deployment url
+backend_url =https://talktokamya-3.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+
+sentiment_analyzer_url=https://sentianalyzer.1lypkdsx9whr.us-south.codeengine.appdomain.cloud/analyze/
