--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,3 +1,3 @@
-backend_url=https://talktokamya-3.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+backend_url=http://localhost:3030
+sentiment_analyzer_url=https://sentianalyzer.1lypkdsx9whr.us-south.codeengine.appdomain.cloud/analyze
 
-sentiment_analyzer_url=https://sentianalyzer.1lypkdsx9whr.us-south.codeengine.appdomain.cloud/analyze/
